--- a/templates/auto/index.html.twig
+++ b/templates/auto/index.html.twig
@@ -9,7 +9,7 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>Hello {{ controller_name }}! </h1>
 
     This friendly message is coming from:
     <ul>
@@ -17,4 +17,7 @@
         <li>Your template at <code><a href="{{ 'C:/wamp64/www/exemple_php/auto/templates/auto/index.html.twig'|file_link(0) }}">templates/auto/index.html.twig</a></code></li>
     </ul>
 </div>
+{% block javascripts %}
+<script src="{{ asset('js/script.js') }}"></script>
+{% endblock %}
 {% endblock %}
