--- a/templates/produits/list.html.twig
+++ b/templates/produits/list.html.twig
@@ -1,6 +1,18 @@
 {% extends'base.html.twig' %}
 
 {% block body %}
+<h2>Les moins chers </h2>
+<div class="row">
+    {% for promo in promos %}
+    <div class="col-md-3">
+            <img src="/{{ promo.image }}" alt="" class="img-thumbnail">
+            <p>  Nom: {{promo.nom}}</p>
+            <p> Marque: {{promo.marque}}</p>
+            <p>Prix: <i class="bg-secondary text-white">{{promo.prix}}€</i></p>
+    </div>
+    {% endfor %}
+</div>
+<hr>
 
 {% for produit in produits %}
 <br>
@@ -14,7 +26,6 @@
 </div>
 <br>
 <a href="{{path('produit_show',{'id':produit.id})}}" class="btn btn-primary">Lire plus!</a>
-<!-- <a class="btn btn-primary text-right mr-6" href="{{path('produit_show', {'id':produit.id})}}">Lire plus !</a> -->
 <hr>
 {% endfor %}
 
