--- a/templates/produits/list.html.twig
+++ b/templates/produits/list.html.twig
@@ -17,7 +17,7 @@
 {% for produit in produits %}
 <br>
 <div class="row">
-    <div class="col-md-6"><img src="/{{produit.image }}" alt="photo" width="100"></div>
+    <div class="col-md-6"><img src="../uploads/{{produit.image }}" alt="photo" width="100"></div>
     <div class="col-md-6">
         <p><b>Nom : </b>{{produit.nom}}</p>
         <p><b>Marque : </b>{{produit.marque}}</p>
